--- a/styles/shared/_legal.scss
+++ b/styles/shared/_legal.scss
@@ -26,6 +26,7 @@
   &__link {
     color: blue;
     text-decoration: underline;
+    overflow-wrap: break-word;
   }
 
   &__list {
